--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -6,4 +6,4 @@
 
 <p>Total: $<%= @cart.total_price %></p>
 
-<td><%= button_to "Remove Escape", cart_path({escape_id: escape}), method: :delete, class: "btn orange-btn"%><td>
+<td><%= button_to "Remove Escape", cart_path({escape_id: @last_escape.id}), method: :delete, class: "btn orange-btn"%><td>
