--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,9 +1,18 @@
-<%= @last_escape.name %>
-<%= @last_escape.city %>
-<%= image_tag @last_escape.image %>
-<%= @last_escape.price %>
-<%= @last_escape.description %>
+<!-- if else for empty cart, link back to escapes  -->
+<!--  all added escapes listed here -->
+<% if @escapes.nil? %>
+<h3>Your cart is empty</h3>
+<% else %>
+  <div class="cart items">
+    <% @escapes.each do |escape| %>
+      <%= escape.name %>
+      <%= escape.city %>
+      <%= image_tag escape.image %>
+      <%= escape.price %>
+      <%= escape.description %>
+      <%= button_to "Remove Escape", cart_path({escape_id: escape.id}), method: :delete, class: "btn orange-btn"%>
+    <% end %>
+  </div>
+<% end %>
 
 <p>Total: $<%= @cart.total_price %></p>
-
-<td><%= button_to "Remove Escape", cart_path({escape_id: @last_escape.id}), method: :delete, class: "btn orange-btn"%><td>
