--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>TuringEscapes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
@@ -9,6 +10,18 @@
   </head>
 
   <body>
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <li><%= link_to "Escape Packages", escapes_path %></li>
+        <li><%= link_to "View Cart", cart_path %></li>
+
+      </ul>
+    <% flash.each do |name, msg| %>
+      <h4><%= content_tag :div, msg, class: name %></h4>
+    <% end %>
+
+
     <%= yield %>
+  </div>
   </body>
 </html>
