update css with variable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+$success: #008000;
+
 .success {
-  color: #008000;
+  color: $success;
 }
