create a link to escape when its deleted

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
       </ul>
     <% flash.each do |name, msg| %>
-      <h4><%= content_tag :div, msg, class: name %></h4>
+      <h4><%= content_tag :div, msg.html_safe, class: name %></h4>
     <% end %>
 
 
