--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -25,3 +25,9 @@
 <% else %>
   <p>Cart Total: $<%= @cart.total_price %></p>
 <% end %>
+
+<% if current_user %>
+  <%= button_to "Checkout", escapes_path, method: :get, class: "btn btn-green"%>
+<% else %>
+  <%= link_to "Login or Create Account to Proceed", login_path%>
+<% end %>
