--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,19 @@
-
-
 <ul class="nav nav-tabs">
   <li><%= link_to "Escape Packages", escapes_path %></li>
-  <li><%= link_to "View Cart (#{@cart.cart_count})", cart_path %></li>
+  <li class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown">Categories
+      <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><%= link_to "Indoors", '/Indoors' %></li>
+          <li><%= link_to "Outdoors", '/Outdoors' %></li>
+        </ul>
+     </li>
 
   <% if current_user %>
   <li class="navbar-right"> <%= link_to "Logout", logout_path, method: :delete %></li>
+  <li class="navbar-right"><%= link_to "Profile", dashboard_path %></li>
   <% else %>
     <li class="navbar-right"> <%= link_to "Login", login_path %></li>
   <% end %>
+  <li class="navbar-right"><%= link_to "View Cart (#{@cart.cart_count})", cart_path %></li>
 </ul>
