create checkout functionality

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -7,9 +7,14 @@ Order Status: <%= @order.status %>
 
   <%="on #{@order.format_updated_at}" %><br>
   <% end %><br>
-Total Price: $500.00<br>
+Total Price: $<%= @order.format_total%><br>
 
-<% @order.escapes.each do |escape| %>
-  <%= link_to escape.name, escape_path(escape) %>
-  <p>1</p>
+<%#<%# @order.escapes.each do |escape| %>
+  <%#= link_to escape.name, escape_path(escape) %>
+<%# end %>
+
+<% @order.order_escapes.each do |order_escape| %>
+ <%= link_to Escape.find(order_escape.escape_id).name, escape_path(order_escape.escape.id)%>
+  <p> Quantity: <%= order_escape.quantity%> Subtotal: $ <%= order_escape.format_total%><br><br>
 <% end %>
+<br>
