--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -28,7 +28,7 @@
 <% end %>
 
 <% if current_user %>
-  <%= button_to "Checkout", orders_path, method: :get, class: "btn btn-green"%>
+  <%= button_to "Checkout", orders_path, method: :post, class: "btn btn-green", params: {total: @cart.total_price}%>
 <% else %>
   <%= link_to "Login or Create Account to Proceed", login_path%>
 <% end %>
