admin funtionality for editing profile

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,13 +2,17 @@
   <p>Log in to view past orders</p>
 <% else %>
 
-<h1>Order History</h1>
+  <h1>Order History</h1>
 
-<% @user.orders.reverse.each do |order| %>
-  <ul>
-    <strong>Order #</strong><%= order.id %>
-    <%= order.format_created_at %>
-    <%= link_to "View Order", order_path(order) %>
-  </ul>
-<% end %>
+  <% if @orders.nil? %>
+    <p>You have no order history!</p>
+  <% else  %>
+    <% @orders.reverse.each do |order| %>
+      <ul>
+        <strong>Order #</strong><%= order.id %>
+        <%= order.format_created_at %>
+        <%= link_to "View Order", order_path(order) %>
+      </ul>
+    <% end %>
+  <% end %>
 <% end %>
