--- a/app/views/admin/users/dashboard.html.erb
+++ b/app/views/admin/users/dashboard.html.erb
@@ -1,3 +1,8 @@
 <h1>ADMIN Dashboard</h1>
 Username: <%= current_user.username %>
-<%= button_to "Edit Account", edit_admin_user_path(current_user), method: :get, class: "btn btn-green"%>
+<%= button_to "Edit Account", edit_admin_user_path(current_user), method: :get, class: "btn btn-green"%><br>
+
+<h3>All Orders</h3>
+<% @orders.each do |order|%>
+<%= link_to "Order ##{order.id}", order_path(order) %><br>
+<% end %>
