--- a/app/views/admin/users/dashboard.html.erb
+++ b/app/views/admin/users/dashboard.html.erb
@@ -2,6 +2,13 @@
 Username: <%= current_user.username %>
 <%= button_to "Edit Account", edit_admin_user_path(current_user), method: :get, class: "btn btn-green"%><br>
 
+<h3>Orders by status</h3>
+<p>Ordered: <%= @orders.find_status("ordered").count%></p>
+<p>Paid: <%= @orders.find_status("paid").count%></p>
+<p>Completed: <%= @orders.find_status("completed").count%></p>
+<p>Cancelled: <%= @orders.find_status("cancelled").count%></p>
+
+
 <h3>All Orders</h3>
 <% @orders.each do |order|%>
 <%= link_to "Order ##{order.id}", order_path(order) %><br>
