--- a/app/views/admin/users/dashboard.html.erb
+++ b/app/views/admin/users/dashboard.html.erb
@@ -3,17 +3,18 @@ Username: <%= current_user.username %>
 <%= button_to "Edit Account", edit_admin_user_path(current_user), method: :get, class: "btn btn-green"%><br>
 
 <h3>Orders by status</h3>
-<p>Ordered: <%= @orders.find_status("ordered").count%></p>
-<p>Paid: <%= @orders.find_status("paid").count%></p>
-<p>Completed: <%= @orders.find_status("completed").count%></p>
-<p>Cancelled: <%= @orders.find_status("cancelled").count%></p>
+<p>Ordered: <%= @all_orders.find_status("ordered").count%></p>
+<p>Paid: <%= @all_orders.find_status("paid").count%></p>
+<p>Completed: <%= @all_orders.find_status("completed").count%></p>
+<p>Cancelled: <%= @all_orders.find_status("cancelled").count%></p>
 
 
 <h3>All Orders</h3>
-<%= form_tag(admin_dashboard_path, :method => "get") do %>
-  <%= label_tag :status %>
-  <%= collection_select :order_id, Order.all, :id, :status %>
-<% end %><br>
+<%= button_to "Ordered", admin_dashboard_path, method: :get, params: {status: "ordered"}, class: "btn btn-small"%>
+<%= button_to "Paid", admin_dashboard_path, method: :get, params: {status: "paid"}, class: "btn btn-small"%>
+<%= button_to "Completed", admin_dashboard_path, method: :get, params: {status: "completed"}, class: "btn btn-small"%>
+<%= button_to "Cancelled", admin_dashboard_path, method: :get, params: {status: "cancelled"}, class: "btn btn-small"%>
+
 <% @orders.each do |order|%>
 <%= link_to "Order ##{order.id}", order_path(order) %><br>
 <% end %>
