--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,3 +61,38 @@ $success: #008000;
 // .actions a {
 //   font-size: 80%;
 // }
+
+
+.element {
+  display: flex;
+}
+
+.table {
+  width: 91%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 50px;
+}
+
+.buttons {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+.btn {
+  width: 170px;
+  margin-bottom: 20px;
+  box-shadow: 0px 3px 4px #888888;
+}
+
+.btn:hover {
+  background-color: green;
+  box-shadow: none;
+  color: white;
+}
+
+.cart-total,
+.dammit-marrisa {
+  text-align: right;
+}
