--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,10 +10,13 @@
      </li>
 
   <% if current_user %>
-  <li class="navbar-right"> <%= link_to "Logout", logout_path, method: :delete %></li>
-  <li class="navbar-right"><%= link_to "Profile", dashboard_path %></li>
+    <li class="navbar-right"><%= link_to "Logout", logout_path, method: :delete %></li>
+    <li class="navbar-right"><%= link_to "Profile", dashboard_path %></li>
+    <% if current_user.admin? %>
+      <li class="navbar-right"><%= link_to "Admin Dashboard", admin_dashboard_path %></li>
+    <% end %>
   <% else %>
-    <li class="navbar-right"> <%= link_to "Login", login_path %></li>
+    <li class="navbar-right"><%= link_to "Login", login_path %></li>
   <% end %>
   <li class="navbar-right"><%= link_to "View Cart (#{@cart.cart_count})", cart_path %></li>
 </ul>
