admin can create escape with categories

--- a/app/views/admin/escapes/_form.html.erb
+++ b/app/views/admin/escapes/_form.html.erb
@@ -15,7 +15,16 @@
 <%= f.text_field :price %><br>
 
 <%= f.label :image %>
-<%= f.text_field :image %><br
+<%= f.text_field :image %><br>
+<%= f.label :category %>
+<!-- <%= f.collection_select :id, Category.all, :id, :title, :required => true %> -->
+  <% Category.all.each do |category| %>
+  <div>
+    <%= check_box_tag :category_ids, category.id, @escape.categories.include?(category), :name => 'escape[category_ids][]' %>
+    <%= category.title %>
+  </div>
+  <% end %>
+<%= f.submit %>
 
 <% end %>
 
