--- a/app/views/admin/users/dashboard.html.erb
+++ b/app/views/admin/users/dashboard.html.erb
@@ -2,11 +2,16 @@
 Username: <%= current_user.username %>
 <%= button_to "Edit Account", edit_admin_user_path(current_user), method: :get, class: "btn btn-green"%><br>
 
-<h3>Orders by status</h3>
-<p>Ordered: <%= @all_orders.find_status("ordered").count%></p>
-<p>Paid: <%= @all_orders.find_status("paid").count%></p>
-<p>Completed: <%= @all_orders.find_status("completed").count%></p>
-<p>Cancelled: <%= @all_orders.find_status("cancelled").count%></p>
+<dl>
+  <dt>
+  <h3>Orders by status</h3>
+  </dt>
+<dd class="percentage percentage-<%=@all_orders.find_status('ordered').count%>"><span class="text"><p>Ordered: <%= @all_orders.find_status("ordered").count%></p></span></dd>
+<dd class="percentage percentage-<%=@all_orders.find_status('paid').count%>"><span class="text"><p>Paid: <%= @all_orders.find_status("paid").count%></p></span></dd>
+<dd class="percentage percentage-<%= @all_orders.find_status("completed").count%>"><span class="text"><p>Completed: <%= @all_orders.find_status("completed").count%></p></span></dd>
+<dd class="percentage percentage-<%= @all_orders.find_status("cancelled").count%>"><span class="text"><p>Cancelled: <%= @all_orders.find_status("cancelled").count%></p></span></dd>
+</dl>
+<br>
 
 <h3>All Orders</h3>
 <%= form_tag admin_dashboard_path, method: 'get' do %>
@@ -14,16 +19,26 @@ Username: <%= current_user.username %>
   <%= submit_tag 'Filter' %>
 <% end %>
 
+<table class="table">
+  <tr>
+    <th>Order #</th>
+    <th>Current Status</th>
+    <th>Change Status to</th>
+  </tr>
 <% @orders.each do |order|%>
-<%= link_to "Order ##{order.id}", order_path(order) %>
-- Order Status: <%= order.status %>
-
-  <% if order.status == "ordered" %>
-    <%= button_to "Change Status to Cancel", order_path(order), method: :put, class: "btn orange-btn", params: {status: :cancelled }%>
-    <%= button_to "Change Status to Paid", order_path(order), method: :put, class: "btn orange-btn", params: {status: :paid }%>
-  <% elsif order.status == "paid" %>
-    <%= button_to "Change Status to Cancel", order_path(order), method: :put, class: "btn orange-btn", params: {status: :cancelled }%>
-    <%= button_to "Change Status to Complete", order_path(order), method: :put, class: "btn orange-btn", params: {status: :completed }%>
-  <% end %>
-
+  <tbody>
+    <tr>
+      <th scope="row"><%= link_to "##{order.id}", order_path(order) %></th>
+      <td><%= order.status %></td>
+    <% if order.status == "ordered" %>
+      <td><%= button_to "Cancel", order_path(order), method: :put, params: {status: :cancelled }%></td>
+      <td><%= button_to "Paid", order_path(order), method: :put, params: {status: :paid }%></td>
+    <% elsif order.status == "paid" %>
+      <td><%= button_to "Cancel", order_path(order), method: :put, params: {status: :cancelled }%></td>
+      <td><%= button_to "Complete", order_path(order), method: :put, params: {status: :completed }%></td>
+    <% end %>
+  </tbody>
 <% end %>
+  
+</tr>
+</table>
