admin can edit escapes

--- a/app/views/admin/escapes/index.html.erb
+++ b/app/views/admin/escapes/index.html.erb
@@ -13,6 +13,7 @@
     <td><%= link_to escape.name, escape_path(escape) %></td>
     <td> <%= escape.description %> </td>
     <td> <%= escape.status %> </td>
+    <td> <%= link_to "Edit", edit_admin_escape_path(escape) %></td>
   </tr>
   <% end %>
 
