--- a/app/views/admin/escapes/new.html.erb
+++ b/app/views/admin/escapes/new.html.erb
@@ -1,4 +1,33 @@
 <h2>Create a new escape</h2>
 
 
-<%= render partial: "form" %>
+<div class ="make-escape">
+
+<%= form_for(@escape, url: admin_escapes_path) do |f| %>
+
+<%= f.label :name %>
+<%= f.text_field :name %><br>
+
+<%= f.label :description %>
+<%= f.text_field :description %><br>
+
+<%= f.label :city %>
+<%= f.text_field :city %><br>
+
+<%= f.label :price %>
+<%= f.text_field :price %><br>
+
+<%= f.label :image %>
+<%= f.text_field :image %><br>
+<%= f.label :category %>
+  <% Category.all.each do |category| %>
+  <div>
+    <%= check_box_tag :category_ids, category.id, @escape.categories.include?(category), :name => 'escape[category_ids][]' %>
+    <%= category.title %>
+  </div>
+  <% end %>
+<%= f.submit %>
+
+<% end %>
+
+</div>
