--- a/app/views/escapes/show.html.erb
+++ b/app/views/escapes/show.html.erb
@@ -2,7 +2,7 @@
 
 <h3><%= @escape.city %></h3>
 
-<%= image_tag @escape.image %>
+<%= image_tag @escape.photo %>
 <%= @escape.price %>
 
 <%= @escape.description %>
