--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
           <li><%= escape.description %></li>
           <li><%= escape.price %></li>
           <li><%= escape.city %></li>
-          <li><%= image_tag escape.image %></li>
+          <li><%= image_tag escape.photo %></li>
         </ul>
     </div>
   <% end %>
