change default image and format sizing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,3 +101,13 @@ $success: #008000;
   color: red;
   font-size: 20px;
 }
+
+.thumbnail {
+  width: 30%;
+  height: 30%;
+  border: none;
+}
+
+.edit-column {
+  margin-left: 20px;
+}
