--- a/app/views/admin/escapes/edit.html.erb
+++ b/app/views/admin/escapes/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Escape</h1>
-<%= form_for(@escape, url: admin_escape_path(@escape), method: :put) do |f| %>
+<%= form_for(@escape, url: admin_escape_path(@escape), html: {multipart: true}, method: :put) do |f| %>
 
 <%= f.label :name %>
 <%= f.text_field :name %><br>
@@ -7,8 +7,8 @@
 <%= f.label :description %>
 <%= f.text_field :description %><br>
 
-<%= f.label :image %>
-<%= f.text_field :image %><br>
+<%= f.label :photo %>
+<%= f.file_field :photo %><br>
 
 <%= f.label :status %>
 <%= f.select :status, [["active"], ["retired"]] %><br>
@@ -16,4 +16,3 @@
 <%= f.submit %>
 
 <% end %>
-
