--- a/app/views/admin/escapes/index.html.erb
+++ b/app/views/admin/escapes/index.html.erb
@@ -6,14 +6,15 @@
     <th>Name</th>
     <th>Description</th>
     <th>Status</th>
+    <th><div class="edit-column">Edit</div></th>
   </tr>
   <% @escapes.each do |escape| %>
   <tr>
-    <td><div id="image_<%= escape.id %>"> <%= image_tag escape.photo.url(:thumb) %><div></td>
+    <td><div id="image_<%= escape.id %>"><%= image_tag escape.photo.url(:thumb), class: :thumbnail %><div></td>
     <td><%= link_to escape.name, escape_path(escape) %></td>
     <td> <%= escape.description %> </td>
     <td> <%= escape.status %> </td>
-    <td> <%= link_to "Edit", edit_admin_escape_path(escape) %></td>
+    <td><div class="edit-column"><%= link_to "Edit", edit_admin_escape_path(escape) %></div></td>
   </tr>
   <% end %>
 
