--- a/app/views/admin/escapes/new.html.erb
+++ b/app/views/admin/escapes/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class ="make-escape">
 
-<%= form_for(@escape, url: admin_escapes_path) do |f| %>
+<%= form_for(@escape, url: admin_escapes_path, html: {multipart: true}) do |f| %>
 
 <%= f.label :name %>
 <%= f.text_field :name %><br>
@@ -16,8 +16,9 @@
 <%= f.label :price %>
 <%= f.text_field :price %><br>
 
-<%= f.label :image %>
-<%= f.text_field :image %><br>
+<%= f.label :photo %>
+<%= f.file_field :photo %><br>
+
 <%= f.label :category %>
   <% Category.all.each do |category| %>
   <div>
