--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -281,7 +281,7 @@ table tr :nth-child(1) {
 // end of all Orders table
 //------------------------
 // Admin image
-.admin_image {
+.admin-image {
   height: 65%;
   width: 65%;
   padding-top: 5px;
@@ -294,3 +294,8 @@ table tr :nth-child(1) {
   padding-left: 50px;
 }
 //------------------
+//image
+.image {
+  height: 30%;
+  width: 30%;
+}
