--- a/app/views/admin/users/dashboard.html.erb
+++ b/app/views/admin/users/dashboard.html.erb
@@ -2,7 +2,8 @@
 <div class = "row">
   <div class = "col-md-3">
     Username: <%= current_user.username %><br>
-    <%= image_tag current_user.image, class: :admin_image %>
+    <%= image_tag current_user.image, class: "admin-image" %>
+    
     <%= button_to "Edit Account", edit_admin_user_path(current_user), method: :get, class: "btn btn-green"%>
 
     <%= button_to "View all escapes", admin_escapes_path, method: :get, class: "btn btn-red" %>
