--- a/app/views/escapes/index.html.erb
+++ b/app/views/escapes/index.html.erb
@@ -4,7 +4,7 @@
     <div class="escape">
       <h4><%= link_to escape.name, escape_path(escape) %></h4>
         <ul>
-          <%= image_tag escape.image %>
+          <%= image_tag escape.image, class: :image %>
           <li>Description: <%= escape.description %></li>
           <li>Price: $<%= sprintf('%.2f', escape.price) %></li>
           <li>City: <%= escape.city %></li>
