--- a/app/views/admin/users/dashboard.html.erb
+++ b/app/views/admin/users/dashboard.html.erb
@@ -3,10 +3,12 @@
   <div class = "col-md-3">
     Username: <%= current_user.username %><br>
     <%= image_tag current_user.image, class: "admin-image" %>
-    
+
     <%= button_to "Edit Account", edit_admin_user_path(current_user), method: :get, class: "btn btn-green"%>
 
     <%= button_to "View all escapes", admin_escapes_path, method: :get, class: "btn btn-red" %>
+
+    <%= button_to "Create new escape", new_admin_escape_path, method: :get, class: "btn btn-red" %>
   </div>
 
   <div class = "col-md-9">
