--- a/app/views/escapes/index.html.erb
+++ b/app/views/escapes/index.html.erb
@@ -1,4 +1,13 @@
-<h1>Escapes</h1>
+<div class="jumbotron">
+  <h1>Escape the Basement</h1>
+</div>
+
+<div class="container">
+  <div class="text-center">
+    <h1>Escapes</h1>
+  </div>
+</div>
+
 <ul>
   <% @escapes.each do |escape| %>
     <div class="escape">
